test/no_arg_eol.err
ERROR: line: 3, col: 8
Expected an argument before the end of the line.
