test/no_arg_eol.s
# Missing argument at the end of the line
mov r1, r2
add r1,
mov r2, r3
